@@ -1,2 +1,4 @@
 # Sudoku
-Sudoku Game
+JavaFX version for the project: javafx-sdk-19.0.2.1
+When running this project on a terminal, make sure to pass VM arguments to the run command; an example would look like:
+    $  java -p /home/arafat/Downloads/javafx-sdk-19.0.2.1/lib --add-modules=ALL-MODULE-PATH -jar Sudoku.jar
